Zoekfuntie op WORD specifiek

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <button type="submit">Buscar</button>
       </form>
     </div>
+    <div class="text-search-container">
+      <input type="text" id="textSearch" placeholder="Buscar palabra en los versículos...">
+      <button id="searchButton">Buscar texto</button>
+    </div>
     <div id="verses-container"></div>
-    <div id="versiculoX">hola</div>
-    <div id="versiculoY">hola</div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
